--- a/cv.tex
+++ b/cv.tex
@@ -74,7 +74,7 @@
 Licenciatura en Ciencias de la Computación
 \langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
 {\em \langs{Expected graduation: 2020}{Graduación estimada: 2020}} \\
-\langs{Current GPA}{Promedio Actual}: 9.64 \langs{\hfill{\em On a 10 point scale}}{}
+\langs{Current GPA}{Promedio Actual}: 9.71 \langs{\hfill{\em On a 10 point scale}}{}
 
 
 %\begin{rSubsection}{Argentina Training Camp}
@@ -91,28 +91,21 @@ Licenciatura en Ciencias de la Computación
 {\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
 
 \item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and other subjects.
-\footnote{A translation can be made upon request.  \url{https://sites.google.com/site/labandalambda/} }}
+\footnote{A translation can be made upon request.  \url{https://labandalambda.github.io/} }}
 {Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas.
-\footnote{\url{https://sites.google.com/site/labandalambda/} }}
+\footnote{\url{https://labandalambda.github.io/} }}
 
-\item \langs{Attended a week long course on Haskell/GHC type system and it's extensions during February 2018.}{Asistió un curso intensivo sobre el sistema de tipos de Haskell/GHC y sus extensiones durante el verano de 2018.}
-\footnote{\langs{Spanish version only.}{} \url{https://cs.famaf.unc.edu.ar/~hoffmann/rio18/}}
+%\item \langs{Attended a week long course on Haskell/GHC type system and it's extensions during February 2018.}{Asistió un curso intensivo sobre el sistema de tipos de Haskell/GHC y sus extensiones durante el verano de 2018.}
+%\footnote{\langs{Spanish version only.}{} \url{https://cs.famaf.unc.edu.ar/~hoffmann/rio18/}}
 
-\item \langs{Competed on the ACM - ICPC 2017 South America/South regional contest and ended 15$^{th}$ (3$^{rd}$ on our university).
-\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
-\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2017/standings} }}
-{Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2017 y finalizó en la $15^{a}$ posición ($3^{o}$ dentro de la universidad).
-\footnote{Nuestro equipo se llamó {\em El Bueno, el Ralo y el Feo} \\
-\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2017/standings} }}
+\item \langs{Competed on the ACM - ICPC South America regional contest on years 2016, 2017 and 2018, reaching the \textbf{ICPC World Finals} on 2019\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
+\url{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}
+{Compitió en las regionals de Sudamérica de la ACM - ICPC en los años 2016, 2017 and 2018, alcanzando y compitiendo en la 43 ICPC World Finals en 2019\footnote{El nombre de nuestro equipo es El Bueno, el Ralo y el Feo. \\
+\url{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}
 
-\item \langs{Competed on the ACM - ICPC 2016 South America/South regional contest and ended 7$^{th}$ (2$^{nd}$ on our university).
-\footnote{\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
-{Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2016 y finalizó en la $7^{ma}$ posición ($2^{do}$ dentro de la universidad).
-\footnote{\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
-
-\item \langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures during July 2016.}
-{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva durante Julio del 2016.}
-\footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
+%\item \langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures during July 2016.}
+%{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva durante Julio del 2016.}
+%\footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
 
 \end{rSubsection}
 
@@ -124,31 +117,47 @@ Licenciatura en Ciencias de la Computación
 
 \begin{rSection}{\langs{Experience}{Experiencia}}
 
+\begin{rSubsection}{Tweag I/O}
+{\langs{August 2019 - January 2020}{Agosto 2019 - Enero 2020}}
+{\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
+{}
+\item[] \langs{Currently doing a Software Engineer Internship at Tweag I/O\footnote{\url{https://www.tweag.io/}}. Working on prototyping a new version of a functional programming language, with the main new feature being a gradual typing and contract-based runtime type verification system.}
+{Actualmente haciendo una pasatía en ingeniería de Software en Tweag I/O\footnote{\url{https://www.tweag.io/}}. Trabajando en prototipar una nueva versión de un lenguaje de programación funcional, donde la principal novedad es agregarle un sistema de tipos gradual con verificación de tipos en tiempo de ejecución usando contratos.}
+\end{rSubsection}
+
+\begin{rSubsection}{Facebook}
+{\langs{January 2019 - March 2019}{Enero 2019 - Marzo 2019}}
+{\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
+{}
+\item[] \langs{Completed a Software Engineer Internship at Facebook during the Winter of 2019. Extended a real time cache invalidator service, that originally worked with only one database, to be able to handle many different ones at the same time. And implemented the invalidator for an internal \texttt{key:value} database as a proof of concept.}
+{Completó una pasantía en Facebook como ingeniero de software, durante el verano de 2019. Trabajó extendiendo un servicio de invalidación de cache en tiempo real para soportar más de un tipo de bases de datos al mismo tiempo. Además, dio soporte a una base de datos interna de tipo \texttt{key:value}.}
+\end{rSubsection}
+
 \begin{rSubsection}{Google}
 {\langs{May 2018 - July 2018}{Mayo 2018 - Julio 2018}}
 {\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
 {}
-\item[] \langs{Completed a Software Engineering Internship at Google for the Summer 2018. Worked on an A/B performance test for a server responsible of authorizing and optimizing reads from a database, the project lowered the noise on these tests from 20\% to 5\%.}
+\item[] \langs{Completed a Software Engineer Internship at Google during the Summer 2018. Worked on an A/B performance test for a server responsible of authorizing and optimizing reads from a database, the project lowered the noise on these tests from 20\% to 5\%.}
 {Completó una pasantía en Google como ingeniero de software, durante el invierno de 2018. Trabajó en un test de performance A/B para un servidor responsable de autorizar y optimizar lecturas a una base de datos, el proyecto disminuyó el ruido en estos tests de un 20\% a un 5\%.}
 \end{rSubsection}
 
 
 \begin{rSubsection}{Universidad de Buenos Aires}
-{\langs{August 2017 - December 2017}{Agosto 2017 - Diciembre 2017}}
-{\langs{Teacher Assistant, Haskell course}
-{Ayudante de segunda, introducción a Haskell}}
+{\langs{March 2017 - December 2017}{Marzo 2017 - Diciembre 2017}}
+{\langs{Teacher Assistant}
+{Ayudante de segunda}}
 {}
 \item[] \langs
-{Worked as a TA on an introductory course on Haskell and functional programming.}
-{Trabajó como ayudante en un curso introductorio sobre Haskell y programación funcional.}
+{Worked as a TA on two courses, an introductory course on Haskell and functional programming. And an algorithms and data structures course, where the main focus was on some classic algorithms and data structures, as well as a basis on formal software specification.}
+{Trabajó como ayudante en dos cursos, un curso introductorio sobre Haskell y programación funcional. Y otro de algoritmos y estructuras de datos, donde el foco principal era estudiar algoritmos y estructuras clásicos, y enseñar las bases de un sistema de especificación formal de software.}
 \end{rSubsection}
 
-\begin{rSubsection}{Universidad de Buenos Aires}
-{\langs{March 2017 - July 2017}{Marzo 2017 - Julio 2017}}
-{\langs{Teacher Assistant, Algorithms and Data Structures II}
-{Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
-\item[] \langs{Worked as a TA on a data structures and algorithms course in my university. We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos. Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
-\end{rSubsection}
+%\begin{rSubsection}{Universidad de Buenos Aires}
+%{\langs{March 2017 - July 2017}{Marzo 2017 - Julio 2017}}
+%{\langs{Teacher Assistant, Algorithms and Data Structures II}
+%{Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
+%\item[] \langs{Worked as a TA on a data structures and algorithms course in my university. We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos. Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
+%\end{rSubsection}
 
 \end{rSection}
 
@@ -159,16 +168,16 @@ Licenciatura en Ciencias de la Computación
 %	Projects
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{\langs{Projects}{Proyectos}}
+%\begin{rSection}{\langs{Projects}{Proyectos}}
 
-\begin{rSubsection}{\langs{Small 32bit OS}{Pequeño SO de 32bits}}
-{\langs{June 2017}{Junio 2017}}{}{}
+%\begin{rSubsection}{\langs{Small 32bit OS}{Pequeño SO de 32bits}}
+%{\langs{June 2017}{Junio 2017}}{}{}
 
-\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode.}
-{Cómo un trabajo para una materia sobre organización del computador, con dos compañeros hicimos un pequeño SO capaz de ejecutar hasta 16 tareas concurrentemente de 2 usuarios distintos en modo protegido.}
-\end{rSubsection}
+%\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode.}
+%{Cómo un trabajo para una materia sobre organización del computador, con dos compañeros hicimos un pequeño SO capaz de ejecutar hasta 16 tareas concurrentemente de 2 usuarios distintos en modo protegido.}
+%\end{rSubsection}
 
-\end{rSection}
+%\end{rSection}
 
 %----------------------------------------------------------------------------------------
 
@@ -182,8 +191,8 @@ Licenciatura en Ciencias de la Computación
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 \langs{Advanced}{Avanzado}			& C++, C \\
-\langs{Intermediate}{Intermedio}		& Haskell, Assembler, Python \\
-\langs{Basic}{Básico}				& \LaTeX, Git, Linux, Coq, PVS 
+\langs{Intermediate}{Intermedio}	& Haskell, Assembler, Python, Rust, Git \\
+\langs{Basic}{Básico}				& \LaTeX, Linux, Coq, PVS, F*
 
 \end{tabular}
 
