Agregado el blog post + Prolog

--- a/cv.tex
+++ b/cv.tex
@@ -31,7 +31,7 @@
 
 \name{Teodoro Freund} % Your name
 %\address{Washington 2329, Buenos Aires, Argentina} % Your address
-\address{tfreund95@gmail.com \\ github.com/teofr}
+\address{tfreund95@gmail.com \\ \url{github.com/teofr}}
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
 %\address{(000)~$\cdot$~111~$\cdot$~1111 \\ john@smith.com} % Your phone number and email
 
@@ -121,8 +121,8 @@ Licenciatura en Ciencias de la Computación
 {\langs{August 2019 - January 2020}{Agosto 2019 - Enero 2020}}
 {\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
 {}
-\item[] \langs{Currently doing a Software Engineer Internship at Tweag I/O\footnote{\url{https://www.tweag.io/}}. Working on prototyping a new version of a functional programming language, with the main new feature being a gradual typing and contract-based runtime type verification system.}
-{Actualmente haciendo una pasatía en ingeniería de Software en Tweag I/O\footnote{\url{https://www.tweag.io/}}. Trabajando en prototipar una nueva versión de un lenguaje de programación funcional, donde la principal novedad es agregarle un sistema de tipos gradual con verificación de tipos en tiempo de ejecución usando contratos.}
+\item[] \langs{Currently doing a Software Engineer Internship at Tweag I/O\footnote{\url{https://www.tweag.io/}}. Working on prototyping a new version of a functional programming language, with the main new feature being a gradual typing and contract-based runtime type verification system.  Some of the techniques I'm using can be found in my blog post \url{https://www.tweag.io/posts/2019-11-28-pcf-makam-spec}.}
+{Actualmente haciendo una pasatía en ingeniería de Software en Tweag I/O\footnote{\url{https://www.tweag.io/}}. Trabajando en prototipar una nueva versión de un lenguaje de programación funcional, donde la principal novedad es agregarle un sistema de tipos gradual con verificación de tipos en tiempo de ejecución usando contratos. Algunas de las técnicas que utilizo se pueden leer en mi blog post \url{https://www.tweag.io/posts/2019-11-28-pcf-makam-spec}.}
 \end{rSubsection}
 
 \begin{rSubsection}{Facebook}
@@ -192,7 +192,7 @@ Licenciatura en Ciencias de la Computación
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 \langs{Advanced}{Avanzado}			& C++, C \\
 \langs{Intermediate}{Intermedio}	& Haskell, Assembler, Python, Rust, Git \\
-\langs{Basic}{Básico}				& \LaTeX, Linux, Coq, PVS, F*
+\langs{Basic}{Básico}				& \LaTeX, Linux, Coq, PVS, F*, Prolog
 
 \end{tabular}
 
