--- a/cv.tex
+++ b/cv.tex
@@ -73,41 +73,38 @@
 {\langs{August 2015 - Present}{Agosto 2015 - Presente}} \\
 Licenciatura en Ciencias de la Computación
 \langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
-{\em \langs{Expected graduation: 2020}{Graduación estimada: 2020}} \\
+{\em \langs{Expected graduation: December 2020}{Graduación estimada: 2020}} \\
 \langs{Current GPA}{Promedio Actual}: 9.71 \langs{\hfill{\em On a 10 point scale}}{}
 
 
-%\begin{rSubsection}{Argentina Training Camp}
-%{\langs{July 2016}{Julio 2016}}{}{}
-%
-%\langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures.}
-%{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva.}
-%\footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
-%\end{rSubsection}
-
-
-
 \begin{rSubsection}
-{\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
+{\langs{Extra university activities}{}}{}{}{}
+
 
 \item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and other subjects.
 \footnote{A translation can be made upon request.  \url{https://labandalambda.github.io/} }}
 {Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas.
 \footnote{\url{https://labandalambda.github.io/} }}
 
-%\item \langs{Attended a week long course on Haskell/GHC type system and it's extensions during February 2018.}{Asistió un curso intensivo sobre el sistema de tipos de Haskell/GHC y sus extensiones durante el verano de 2018.}
-%\footnote{\langs{Spanish version only.}{} \url{https://cs.famaf.unc.edu.ar/~hoffmann/rio18/}}
+\end{rSubsection}
 
-\item \langs{Competed on the ACM - ICPC South America regional contest on years 2016, 2017 and 2018, reaching the \textbf{ICPC World Finals} on 2019\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
-\url{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}
-{Compitió en las regionals de Sudamérica de la ACM - ICPC en los años 2016, 2017 and 2018, alcanzando y compitiendo en la 43 ICPC World Finals en 2019\footnote{El nombre de nuestro equipo es El Bueno, el Ralo y el Feo. \\
-\url{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}
+\begin{rSubsection}
+{\langs{Extra courses}{}}{}{}{}
 
-%\item \langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures during July 2016.}
-%{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva durante Julio del 2016.}
-%\footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
+\item Rewriting, lambda calculus and explicit substitutions - \textit{Alejandro Ríos}
+\item Randomness and Automata - \textit{Verónica Becher}
+\item Topics in Automata Theory - \textit{Olivier Carton}
+\item Haskell/GHC's type system and its extensions - \textit{Guillaume Hoffmann}
+\item Validating Critical Systems with PVS - \textit{Mariano Moscato}
+\item $\lambda$-Calculus and reasonable cost models - \textit{Beniamino Accatoli}
+\item Formal Verification with F* and Meta-F* - \textit{Nikhil Swamy, Guido Martinez}
+
+
 
 \end{rSubsection}
+
+
+
 
 \end{rSection}
 
@@ -121,7 +118,7 @@ Licenciatura en Ciencias de la Computación
 {\langs{August 2019 - January 2020}{Agosto 2019 - Enero 2020}}
 {\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
 {}
-\item[] \langs{Currently doing a Software Engineer Internship at Tweag I/O\footnote{\url{https://www.tweag.io/}}. Working on prototyping a new version of a functional programming language, with the main new feature being a gradual typing and contract-based runtime type verification system.  Some of the techniques I'm using can be found in my blog post \url{https://www.tweag.io/posts/2019-11-28-pcf-makam-spec}.}
+\item[] \langs{Currently doing a Software Engineer Internship at Tweag I/O\footnote{\url{https://www.tweag.io/}}. Working on prototyping a new version of a functional programming language, with the main new feature being a gradual typing and contract-based runtime type verification system.  Some of the techniques I'm using to prototype the language can be found in my blog post \url{https://www.tweag.io/posts/2019-11-28-pcf-makam-spec}.}
 {Actualmente haciendo una pasatía en ingeniería de Software en Tweag I/O\footnote{\url{https://www.tweag.io/}}. Trabajando en prototipar una nueva versión de un lenguaje de programación funcional, donde la principal novedad es agregarle un sistema de tipos gradual con verificación de tipos en tiempo de ejecución usando contratos. Algunas de las técnicas que utilizo se pueden leer en mi blog post \url{https://www.tweag.io/posts/2019-11-28-pcf-makam-spec}.}
 \end{rSubsection}
 
@@ -143,25 +140,38 @@ Licenciatura en Ciencias de la Computación
 
 
 \begin{rSubsection}{Universidad de Buenos Aires}
-{\langs{March 2017 - December 2017}{Marzo 2017 - Diciembre 2017}}
-{\langs{Teacher Assistant}
-{Ayudante de segunda}}
-{}
-\item[] \langs
-{Worked as a TA on two courses, an introductory course on Haskell and functional programming. And an algorithms and data structures course, where the main focus was on some classic algorithms and data structures, as well as a basis on formal software specification.}
-{Trabajó como ayudante en dos cursos, un curso introductorio sobre Haskell y programación funcional. Y otro de algoritmos y estructuras de datos, donde el foco principal era estudiar algoritmos y estructuras clásicos, y enseñar las bases de un sistema de especificación formal de software.}
+{\langs{July 2017 - December 2017}{Marzo 2017 - Julio 2017}}
+{\langs{Teacher Assistant, Algebra Workshop}
+{Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
+\item[] \langs{Worked as a TA on a workshop that students take side by side with the Algebra subject. We teach an introduction to programming using Haskell, and show some concepts related to what they see on the main course (for instance, the relationship between induction and recursion).}{}
 \end{rSubsection}
 
-%\begin{rSubsection}{Universidad de Buenos Aires}
-%{\langs{March 2017 - July 2017}{Marzo 2017 - Julio 2017}}
-%{\langs{Teacher Assistant, Algorithms and Data Structures II}
-%{Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
-%\item[] \langs{Worked as a TA on a data structures and algorithms course in my university. We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos. Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
-%\end{rSubsection}
+\begin{rSubsection}{Universidad de Buenos Aires}
+{\langs{March 2017 - July 2017}{Marzo 2017 - Julio 2017}}
+{\langs{Teacher Assistant, Algorithms and Data Structures II}
+{Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
+\item[] \langs{Worked as a TA on a data structures and algorithms course in my university. We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos. Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
+\end{rSubsection}
+
 
 \end{rSection}
 
 
+%----------------------------------------------------------------------------------------
+%	Honors
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{\langs{Honors and Awards}{}}
+
+
+
+\item \langs{Competed on the ACM - ICPC South America regional contest on years 2016, 2017 and 2018, reaching the \textbf{ICPC World Finals} on 2019\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
+\url{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}
+{Compitió en las regionals de Sudamérica de la ACM - ICPC en los años 2016, 2017 and 2018, alcanzando y compitiendo en la 43 ICPC World Finals en 2019\footnote{El nombre de nuestro equipo es El Bueno, el Ralo y el Feo. \\
+\url{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}
+
+
+\end{rSection}
 
 
 %----------------------------------------------------------------------------------------
