Actualizado el contenido.
Y mejorados los links

--- a/cv.tex
+++ b/cv.tex
@@ -31,7 +31,7 @@
 
 \name{Teodoro Freund} % Your name
 %\address{Washington 2329, Buenos Aires, Argentina} % Your address
-\address{tfreund95@gmail.com \\ \url{github.com/teofr}}
+\address{\texttt{tfreund95@gmail.com} \\ \href{https://github.com/teofr}{\texttt{github.com/teofr}} \\ \href{https://www.linkedin.com/in/teodoro-freund/}{\texttt{linkedin.com/in/teodoro-freund}}}
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
 %\address{(000)~$\cdot$~111~$\cdot$~1111 \\ john@smith.com} % Your phone number and email
 
@@ -73,7 +73,7 @@
 {\langs{August 2015 - Present}{Agosto 2015 - Presente}} \\
 Licenciatura en Ciencias de la Computación
 \langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
-{\em \langs{Expected graduation: 2020}{Graduación estimada: 2020}} \\
+{\em \langs{Expected graduation: December 2020}{Graduación estimada: Diciembre 2020}} \\
 \langs{Current GPA}{Promedio Actual}: 9.71 \langs{\hfill{\em On a 10 point scale}}{}
 
 
@@ -90,18 +90,17 @@ Licenciatura en Ciencias de la Computación
 \begin{rSubsection}
 {\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
 
-\item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and other subjects.
-\footnote{A translation can be made upon request.  \url{https://labandalambda.github.io/} }}
-{Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas.
-\footnote{\url{https://labandalambda.github.io/} }}
+\item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and related subjects.
+\footnote{A translation can be made upon request.  \href{https://labandalambda.github.io/}{\texttt{labandalambda.github.io}} }}
+{Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas relacionados.
+\footnote{\href{https://labandalambda.github.io/}{\texttt{labandalambda.github.io}} }}
 
 %\item \langs{Attended a week long course on Haskell/GHC type system and it's extensions during February 2018.}{Asistió un curso intensivo sobre el sistema de tipos de Haskell/GHC y sus extensiones durante el verano de 2018.}
 %\footnote{\langs{Spanish version only.}{} \url{https://cs.famaf.unc.edu.ar/~hoffmann/rio18/}}
 
 \item \langs{Competed on the ACM - ICPC South America regional contest on years 2016, 2017 and 2018, reaching the \textbf{ICPC World Finals} on 2019\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
-\url{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}
-{Compitió en las regionals de Sudamérica de la ACM - ICPC en los años 2016, 2017 and 2018, alcanzando y compitiendo en la 43 ICPC World Finals en 2019\footnote{El nombre de nuestro equipo es El Bueno, el Ralo y el Feo. \\
-\url{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}
+\href{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}{\texttt{icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}}
+{Compitió en las regionals de Sudamérica de la ACM - ICPC en los años 2016, 2017 and 2018, alcanzando y compitiendo en la 43 ICPC World Finals en 2019\footnote{El nombre de nuestro equipo es El Bueno, el Ralo y el Feo. \\href{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}{\texttt{icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}}
 
 %\item \langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures during July 2016.}
 %{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva durante Julio del 2016.}
@@ -119,23 +118,25 @@ Licenciatura en Ciencias de la Computación
 
 \begin{rSubsection}{Tweag I/O}
 {\langs{August 2019 - January 2020}{Agosto 2019 - Enero 2020}}
-{\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
+{\langs{Software Engineer Intern}{Pasante en ingeniería de software}}
 {}
-\item[] \langs{Currently doing a Software Engineer Internship at Tweag I/O\footnote{\url{https://www.tweag.io/}}. Working on prototyping a new version of a functional programming language, with the main new feature being a gradual typing and contract-based runtime type verification system.  Some of the techniques I'm using can be found in my blog post \url{https://www.tweag.io/posts/2019-11-28-pcf-makam-spec}.}
-{Actualmente haciendo una pasatía en ingeniería de Software en Tweag I/O\footnote{\url{https://www.tweag.io/}}. Trabajando en prototipar una nueva versión de un lenguaje de programación funcional, donde la principal novedad es agregarle un sistema de tipos gradual con verificación de tipos en tiempo de ejecución usando contratos. Algunas de las técnicas que utilizo se pueden leer en mi blog post \url{https://www.tweag.io/posts/2019-11-28-pcf-makam-spec}.}
+\item[] \langs{Completed a Software Engineer Internship at Tweag I/O\footnote{\href{https://www.tweag.io/}{\texttt{tweag.io}}}. Worked on prototyping a new version of a functional programming language, with the main new feature being a gradual typing and contract-based runtime type verification system. Some of the techniques I used for rapid experimentation can be found on my blog post \\
+\href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}.}
+{Completó una pasatía en ingeniería de Software en Tweag I/O\footnote{\href{https://www.tweag.io/}{\texttt{tweag.io}}}. Trabajó en prototipar una nueva versión de un lenguaje de programación funcional, donde la principal novedad es agregarle un sistema de tipos gradual con verificación de tipos en tiempo de ejecución usando contratos. Algunas de las técnicas que utilizó para experimentar rapidamente se pueden leer en mi blog post \\
+\href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}.}
 \end{rSubsection}
 
 \begin{rSubsection}{Facebook}
 {\langs{January 2019 - March 2019}{Enero 2019 - Marzo 2019}}
-{\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
+{\langs{Software Engineer Intern}{Pasante en ingeniería de software}}
 {}
 \item[] \langs{Completed a Software Engineer Internship at Facebook during the Winter of 2019. Extended a real time cache invalidator service, that originally worked with only one database, to be able to handle many different ones at the same time. And implemented the invalidator for an internal \texttt{key:value} database as a proof of concept.}
-{Completó una pasantía en Facebook como ingeniero de software, durante el verano de 2019. Trabajó extendiendo un servicio de invalidación de cache en tiempo real para soportar más de un tipo de bases de datos al mismo tiempo. Además, dio soporte a una base de datos interna de tipo \texttt{key:value}.}
+{Completó una pasantía en Facebook como ingeniero de software, durante el verano de 2019. Trabajó extendiendo un servicio de invalidación de cache en tiempo real para soportar más de un tipo de bases de datos al mismo tiempo. Además, dio soporte a una base de datos interna de tipo \texttt{key:value} como prueba de concepto.}
 \end{rSubsection}
 
 \begin{rSubsection}{Google}
 {\langs{May 2018 - July 2018}{Mayo 2018 - Julio 2018}}
-{\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
+{\langs{Software Engineer Intern}{Pasante en ingeniería de software}}
 {}
 \item[] \langs{Completed a Software Engineer Internship at Google during the Summer 2018. Worked on an A/B performance test for a server responsible of authorizing and optimizing reads from a database, the project lowered the noise on these tests from 20\% to 5\%.}
 {Completó una pasantía en Google como ingeniero de software, durante el invierno de 2018. Trabajó en un test de performance A/B para un servidor responsable de autorizar y optimizar lecturas a una base de datos, el proyecto disminuyó el ruido en estos tests de un 20\% a un 5\%.}
