Cambiada la pagina

--- a/cv.tex
+++ b/cv.tex
@@ -31,7 +31,7 @@
 
 \name{Teodoro Freund} % Your name
 %\address{Washington 2329, Buenos Aires, Argentina} % Your address
-\address{\texttt{tfreund95@gmail.com} \\ \href{https://github.com/teofr}{\texttt{github.com/teofr}} \\ \href{https://www.linkedin.com/in/teodoro-freund/}{\texttt{linkedin.com/in/teodoro-freund}}}
+\address{\texttt{tfreund95@gmail.com} \\ \href{https://teofr.github.io/}{\texttt{teofr.github.io}}}
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
 %\address{(000)~$\cdot$~111~$\cdot$~1111 \\ john@smith.com} % Your phone number and email
 
