--- a/cv.tex
+++ b/cv.tex
@@ -40,7 +40,7 @@
 \def \LANGEN {en}
 \def \LANGES {es}
 
-%\def \LANG {es}
+% \def \LANG {es}
 
 
 \newcommand{\langs}[2]
@@ -74,7 +74,7 @@
 Licenciatura en Ciencias de la Computación
 \langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
 {\em \langs{Expected graduation: December 2020}{Graduación estimada: Diciembre 2020}} \\
-\langs{Current GPA}{Promedio Actual}: 9.71 \langs{\hfill{\em On a 10 point scale}}{}
+\langs{Current GPA}{Promedio Actual}: 9.89 \langs{\hfill{\em On a 10 point scale}}{}
 
 
 %\begin{rSubsection}{Argentina Training Camp}
@@ -90,17 +90,18 @@ Licenciatura en Ciencias de la Computación
 \begin{rSubsection}
 {\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
 
-\item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and related subjects.
+\item \langs{Active participation since March 2016 on a reading group about functional programming, $\lambda$-calculus, rewriting, type theory and related subjects. I'm in charge of the group since March 2020.
 \footnote{A translation can be made upon request.  \href{https://labandalambda.github.io/}{\texttt{labandalambda.github.io}} }}
-{Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas relacionados.
+{Participo activamente desde Marzo del 2016 en un grupo de lectura sobre programción funcional, cálculo-$\lambda$, reescritura, teoría de tipos y otros temas relacionados. Estoy a cargo del grupo desde Marzo del 2020.
 \footnote{\href{https://labandalambda.github.io/}{\texttt{labandalambda.github.io}} }}
 
 %\item \langs{Attended a week long course on Haskell/GHC type system and it's extensions during February 2018.}{Asistió un curso intensivo sobre el sistema de tipos de Haskell/GHC y sus extensiones durante el verano de 2018.}
 %\footnote{\langs{Spanish version only.}{} \url{https://cs.famaf.unc.edu.ar/~hoffmann/rio18/}}
 
-\item \langs{Competed on the ACM - ICPC South America regional contest on years 2016, 2017 and 2018, reaching the \textbf{ICPC World Finals} on 2019\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
+\item \langs{I competed on the ACM - ICPC South America regional contest on years 2016, 2017 and 2018, reaching the \textbf{ICPC World Finals} on 2019\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
 \href{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}{\texttt{icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}}
-{Compitió en las regionals de Sudamérica de la ACM - ICPC en los años 2016, 2017 and 2018, alcanzando y compitiendo en la 43 ICPC World Finals en 2019\footnote{El nombre de nuestro equipo es El Bueno, el Ralo y el Feo. \\href{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}{\texttt{icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}}
+{Competí en las regionals de Sudamérica de la ACM - ICPC en los años 2016, 2017 y 2018, alcanzando y compitiendo en la \textbf{ICPC World Finals} en 2019\footnote{El nombre de nuestro equipo es El Bueno, el Ralo y el Feo. \\
+\href{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}{\texttt{icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}}
 
 %\item \langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures during July 2016.}
 %{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva durante Julio del 2016.}
@@ -116,30 +117,30 @@ Licenciatura en Ciencias de la Computación
 
 \begin{rSection}{\langs{Experience}{Experiencia}}
 
-\begin{rSubsection}{Tweag I/O}
+\begin{rSubsection}{Tweag I/O\footnote{\href{https://www.tweag.io/}{\texttt{tweag.io}}}}
 {\langs{August 2019 - January 2020}{Agosto 2019 - Enero 2020}}
 {\langs{Software Engineer Intern}{Pasante en ingeniería de software}}
 {}
-\item[] \langs{Completed a Software Engineer Internship at Tweag I/O\footnote{\href{https://www.tweag.io/}{\texttt{tweag.io}}}. Worked on prototyping a new version of a functional programming language, with the main new feature being a gradual typing and contract-based runtime type verification system. Some of the techniques I used for rapid experimentation can be found on my blog post \\
-\href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}.}
-{Completó una pasatía en ingeniería de Software en Tweag I/O\footnote{\href{https://www.tweag.io/}{\texttt{tweag.io}}}. Trabajó en prototipar una nueva versión de un lenguaje de programación funcional, donde la principal novedad es agregarle un sistema de tipos gradual con verificación de tipos en tiempo de ejecución usando contratos. Algunas de las técnicas que utilizó para experimentar rapidamente se pueden leer en mi blog post \\
-\href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}.}
+\item[] \langs{I prototyped a new configuration functional programming language, with a novel gradual type system. Some of the techniques I used for rapid experimentation can be found on my blog post\footnote{
+\href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}}.}
+{Prototipé un lenguaje de configuración funcional, con un sistema novedoso de tipos graduales. Algunas de las técnicas que utilicé para experimentar rapidamente se pueden leer en mi blog post\footnote{
+\href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}}.}
 \end{rSubsection}
 
 \begin{rSubsection}{Facebook}
 {\langs{January 2019 - March 2019}{Enero 2019 - Marzo 2019}}
 {\langs{Software Engineer Intern}{Pasante en ingeniería de software}}
 {}
-\item[] \langs{Completed a Software Engineer Internship at Facebook during the Winter of 2019. Extended a real time cache invalidator service, that originally worked with only one database, to be able to handle many different ones at the same time. And implemented the invalidator for an internal \texttt{key:value} database as a proof of concept.}
-{Completó una pasantía en Facebook como ingeniero de software, durante el verano de 2019. Trabajó extendiendo un servicio de invalidación de cache en tiempo real para soportar más de un tipo de bases de datos al mismo tiempo. Además, dio soporte a una base de datos interna de tipo \texttt{key:value} como prueba de concepto.}
+\item[] \langs{I extended a real time cache invalidator service, that originally worked with only one database, to be able to handle many different ones at the same time. And I implemented the invalidator for an internal \texttt{key:value} database as a proof of concept.}
+{Extendí un servicio de invalidación de cache en tiempo real para soportar más de un tipo de bases de datos al mismo tiempo. Además, di soporte a una base de datos interna de tipo \texttt{key:value} como prueba de concepto.}
 \end{rSubsection}
 
 \begin{rSubsection}{Google}
 {\langs{May 2018 - July 2018}{Mayo 2018 - Julio 2018}}
 {\langs{Software Engineer Intern}{Pasante en ingeniería de software}}
 {}
-\item[] \langs{Completed a Software Engineer Internship at Google during the Summer 2018. Worked on an A/B performance test for a server responsible of authorizing and optimizing reads from a database, the project lowered the noise on these tests from 20\% to 5\%.}
-{Completó una pasantía en Google como ingeniero de software, durante el invierno de 2018. Trabajó en un test de performance A/B para un servidor responsable de autorizar y optimizar lecturas a una base de datos, el proyecto disminuyó el ruido en estos tests de un 20\% a un 5\%.}
+\item[] \langs{I built an A/B performance test for a server responsible of authorizing and optimizing reads from a database, the project lowered the noise on these tests from 20\% to 5\%.}
+{Hice un test de performance A/B para un servidor responsable de autorizar y optimizar lecturas a una base de datos, el proyecto disminuyó el ruido en estos tests de un 20\% a un 5\%.}
 \end{rSubsection}
 
 
@@ -149,8 +150,8 @@ Licenciatura en Ciencias de la Computación
 {Ayudante de segunda}}
 {}
 \item[] \langs
-{Worked as a TA on two courses, an introductory course on Haskell and functional programming. And an algorithms and data structures course, where the main focus was on some classic algorithms and data structures, as well as a basis on formal software specification.}
-{Trabajó como ayudante en dos cursos, un curso introductorio sobre Haskell y programación funcional. Y otro de algoritmos y estructuras de datos, donde el foco principal era estudiar algoritmos y estructuras clásicos, y enseñar las bases de un sistema de especificación formal de software.}
+{I worked as a TA on two courses, an introductory course on Haskell and functional programming. And an algorithms and data structures course, where the main focus was on some classic algorithms and data structures, as well as a basis on formal software specification.}
+{Trabajé como ayudante en dos cursos, un curso introductorio sobre Haskell y programación funcional. Y otro de algoritmos y estructuras de datos, donde el foco principal era estudiar algoritmos y estructuras clásicos, y enseñar las bases de un sistema de especificación formal de software.}
 \end{rSubsection}
 
 %\begin{rSubsection}{Universidad de Buenos Aires}
@@ -169,16 +170,16 @@ Licenciatura en Ciencias de la Computación
 %	Projects
 %----------------------------------------------------------------------------------------
 
-%\begin{rSection}{\langs{Projects}{Proyectos}}
+% \begin{rSection}{\langs{Projects}{Proyectos}}
 
-%\begin{rSubsection}{\langs{Small 32bit OS}{Pequeño SO de 32bits}}
-%{\langs{June 2017}{Junio 2017}}{}{}
+% \begin{rSubsection}{\langs{Small 32bit OS}{Pequeño SO de 32bits}}
+% {\langs{June 2017}{Junio 2017}}{}{}
 
-%\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode.}
-%{Cómo un trabajo para una materia sobre organización del computador, con dos compañeros hicimos un pequeño SO capaz de ejecutar hasta 16 tareas concurrentemente de 2 usuarios distintos en modo protegido.}
-%\end{rSubsection}
+% \langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode.}
+% {Cómo un trabajo para una materia sobre organización del computador, con dos compañeros hicimos un pequeño SO capaz de ejecutar hasta 16 tareas concurrentemente de 2 usuarios distintos en modo protegido.}
+% \end{rSubsection}
 
-%\end{rSection}
+% \end{rSection}
 
 %----------------------------------------------------------------------------------------
 
@@ -192,8 +193,8 @@ Licenciatura en Ciencias de la Computación
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 \langs{Advanced}{Avanzado}			& C++, C \\
-\langs{Intermediate}{Intermedio}	& Haskell, Assembler, Python, Rust, Git \\
-\langs{Basic}{Básico}				& \LaTeX, Linux, Coq, PVS, F*, Prolog
+\langs{Intermediate}{Intermedio}	& Haskell, Assembler, Python, Rust, Git, \LaTeX \\
+\langs{Basic}{Básico}				& Linux, Coq, PVS, F*, Prolog, Bash, Racket
 
 \end{tabular}
 
@@ -213,12 +214,14 @@ Licenciatura en Ciencias de la Computación
 \langs{Spanish}{Español}		& \langs{Native}{Nativo} & 
 \langs{Italian}{Italiano}				& \langs{Intermediate}{Intermedio} \\
 \langs{French}{Francés} & \langs{Basic}{Básico} &
-\langs{German}{Alemán} & \langs{Basic}{Básico}
+\langs{German}{Alemán} & \langs{Basic}{Básico} \\
 
 \end{tabular}
 \end{center}
 
 \end{rSection}
+
+\vspace{3cm}
 
 
 %----------------------------------------------------------------------------------------
