--- a/cv.tex
+++ b/cv.tex
@@ -73,8 +73,8 @@
 {\langs{August 2015 - Present}{Agosto 2015 - Presente}} \\
 Licenciatura en Ciencias de la Computación
 \langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
-{\em \langs{Expected graduation: December 2020}{Graduación estimada: Diciembre 2020}} \\
-\langs{Current GPA}{Promedio Actual}: 9.74 \langs{\hfill{\em On a 10 point scale}}{}
+{\em \langs{Expected graduation: April 2021}{Graduación estimada: Abril 2021}} \\
+\langs{Current GPA}{Promedio Actual}: 9.73 \langs{\hfill{\em On a 10 point scale}}{}
 
 
 %\begin{rSubsection}{Argentina Training Camp}
@@ -90,8 +90,9 @@ Licenciatura en Ciencias de la Computación
 \begin{rSubsection}
 {\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
 
-\item \langs{Active participation since March 2016 on a reading group about functional programming, $\lambda$-calculus, rewriting, type theory and related subjects. I'm in charge of the group since March 2020.
-\footnote{A translation can be made upon request.  \href{https://labandalambda.github.io/}{\texttt{labandalambda.github.io}} }}
+\item \langs{Active participation since March 2016 on a reading group about functional programming, $\lambda$-calculus, rewriting, type theory and related subjects. 
+% I'm in charge of the group since March 2020.
+\footnote{\href{https://labandalambda.github.io/}{\texttt{labandalambda.github.io}} }}
 {Participo activamente desde Marzo del 2016 en un grupo de lectura sobre programción funcional, cálculo-$\lambda$, reescritura, teoría de tipos y otros temas relacionados. Estoy a cargo del grupo desde Marzo del 2020.
 \footnote{\href{https://labandalambda.github.io/}{\texttt{labandalambda.github.io}} }}
 
@@ -99,7 +100,7 @@ Licenciatura en Ciencias de la Computación
 %\footnote{\langs{Spanish version only.}{} \url{https://cs.famaf.unc.edu.ar/~hoffmann/rio18/}}
 
 \item \langs{I competed on the ACM - ICPC South America regional contest on years 2016, 2017 and 2018, reaching the \textbf{ICPC World Finals} on 2019\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
-\href{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}{\texttt{icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}}
+\href{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}{\texttt{icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}. I prepared problems for the 2019 and 2020 Argentinian competition.}
 {Competí en las regionals de Sudamérica de la ACM - ICPC en los años 2016, 2017 y 2018, alcanzando y compitiendo en la \textbf{ICPC World Finals} en 2019\footnote{El nombre de nuestro equipo es El Bueno, el Ralo y el Feo. \\
 \href{https://icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}{\texttt{icpc.baylor.edu/ICPCID/MPJ2YWYRR35P}}}}
 
@@ -107,6 +108,20 @@ Licenciatura en Ciencias de la Computación
 %{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva durante Julio del 2016.}
 %\footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
 
+\end{rSubsection}
+
+
+\begin{rSubsection}
+	{\langs{Extracurricular courses}{}}{}{}{}
+	
+	\item Rewriting, lambda calculus and explicit substitutions - \textit{Alejandro Ríos}
+	\item Randomness and Automata - \textit{Verónica Becher}
+	\item Topics in Automata Theory - \textit{Olivier Carton}
+	\item Haskell/GHC's type system and its extensions - \textit{Guillaume Hoffmann}
+	\item Validating Critical Systems with PVS - \textit{Mariano Moscato}
+	\item $\lambda$-Calculus and reasonable cost models - \textit{Beniamino Accatoli}
+	\item Formal Verification with F* and Meta-F* - \textit{Nikhil Swamy, Guido Martinez}
+	\item Behavioural Types and Contracts - \textit{Hernán Melgratti}
 \end{rSubsection}
 
 \end{rSection}
@@ -117,12 +132,19 @@ Licenciatura en Ciencias de la Computación
 
 \begin{rSection}{\langs{Experience}{Experiencia}}
 
+\begin{rSubsection}{Invgate\footnote{\href{https://www.invgate.com/}{\texttt{invgate.com}}}}
+{\langs{July 2020 - Present}{Julio 2020 - Presente}}
+{\langs{Backend Software Engineer}{Backend Software Engineer}}
+{}
+\item[] \langs{We develop a product that provides automatic inventory of IT assets. The main challenges involve handling big amounts of data, sweeping and recoverying valuable information from a company's network, providing reliable and easily deployable software to install on all of a company's computers, etc.}{}	
+\end{rSubsection}
+
 \begin{rSubsection}{Tweag I/O\footnote{\href{https://www.tweag.io/}{\texttt{tweag.io}}}}
 {\langs{August 2019 - January 2020}{Agosto 2019 - Enero 2020}}
 {\langs{Software Engineer Intern}{Pasante en ingeniería de software}}
 {}
 \item[] \langs{I prototyped a new configuration functional programming language, with a novel gradual type system. Some of the techniques I used for rapid experimentation can be found on my blog post\footnote{
-\href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}}.}
+\href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}}. And the language can be found on the open repository\footnote{\href{https://github.com/tweag/nickel}{\texttt{github.com/tweag/nickel}}}}
 {Prototipé un lenguaje de configuración funcional, con un sistema novedoso de tipos graduales. Algunas de las técnicas que utilicé para experimentar rapidamente se pueden leer en mi blog post\footnote{
 \href{https://www.tweag.io/blog/2019-11-28-PCF-makam-spec/}{\texttt{tweag.io/blog/2019-11-28-PCF-makam-spec}}}.}
 \end{rSubsection}
@@ -139,19 +161,33 @@ Licenciatura en Ciencias de la Computación
 {\langs{May 2018 - July 2018}{Mayo 2018 - Julio 2018}}
 {\langs{Software Engineer Intern}{Pasante en ingeniería de software}}
 {}
-\item[] \langs{I built an A/B performance test for a server responsible of authorizing and optimizing reads from a database, the project lowered the noise on these tests from 20\% to 5\%.}
+\item[] \langs{I built an A/B performance test for a server responsible of authorizing and optimizing queries from a database, the project lowered the noise on these tests from 20\% to 5\%.}
 {Hice un test de performance A/B para un servidor responsable de autorizar y optimizar lecturas a una base de datos, el proyecto disminuyó el ruido en estos tests de un 20\% a un 5\%.}
 \end{rSubsection}
 
 
+% \begin{rSubsection}{Universidad de Buenos Aires}
+% {\langs{March 2017 - December 2017}{Marzo 2017 - Diciembre 2017}}
+% {\langs{Teacher Assistant}
+% {Ayudante de segunda}}
+% {}
+% \item[] \langs
+% {I worked as a TA on two courses, an introductory course on Haskell and functional programming. And an algorithms and data structures course, where the main focus was on teaching some classic algorithms and data structures, as well as a basis on formal software specification.}
+% {Trabajé como ayudante en dos cursos, un curso introductorio sobre Haskell y programación funcional. Y otro de algoritmos y estructuras de datos, donde el foco principal era estudiar algoritmos y estructuras clásicos, y enseñar las bases de un sistema de especificación formal de software.}
+% \end{rSubsection}
+
 \begin{rSubsection}{Universidad de Buenos Aires}
-{\langs{March 2017 - December 2017}{Marzo 2017 - Diciembre 2017}}
-{\langs{Teacher Assistant}
-{Ayudante de segunda}}
-{}
-\item[] \langs
-{I worked as a TA on two courses, an introductory course on Haskell and functional programming. And an algorithms and data structures course, where the main focus was on some classic algorithms and data structures, as well as a basis on formal software specification.}
-{Trabajé como ayudante en dos cursos, un curso introductorio sobre Haskell y programación funcional. Y otro de algoritmos y estructuras de datos, donde el foco principal era estudiar algoritmos y estructuras clásicos, y enseñar las bases de un sistema de especificación formal de software.}
+{\langs{July 2017 - December 2017}{Marzo 2017 - Julio 2017}}
+{\langs{Teaching Assistant, Algebra Workshop}
+{Ayudante de segunda, Taller de Álgebra}}{}
+\item[] \langs{Worked as a TA on a workshop that students take side by side with the Algebra subject. We teach an introduction to programming using Haskell, and show some concepts related to what they see on the main course (for instance, the relationship between induction and recursion).}{}
+\end{rSubsection}
+
+\begin{rSubsection}{Universidad de Buenos Aires}
+{\langs{March 2017 - July 2017}{Marzo 2017 - Julio 2017}}
+{\langs{Teaching Assistant, Algorithms and Data Structures II}
+{Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
+\item[] \langs{Worked as a TA on a data structures and algorithms course in my university. We introduce students on some classic algorithms and data structures, with a focus on formal software specification and correctness.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos. Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
 \end{rSubsection}
 
 %\begin{rSubsection}{Universidad de Buenos Aires}
@@ -192,9 +228,9 @@ Licenciatura en Ciencias de la Computación
 
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-\langs{Advanced}{Avanzado}			& C++, C \\
-\langs{Intermediate}{Intermedio}	& Haskell, Assembler, Python, Rust, Git, \LaTeX \\
-\langs{Basic}{Básico}				& Linux, Coq, PVS, F*, Prolog, Bash, Racket
+\langs{Advanced}{Avanzado}			& C++, C, Python \\
+\langs{Intermediate}{Intermedio}	& Haskell, Assembler, Rust, Git, \LaTeX \\
+\langs{Basic}{Básico}				& Linux, Coq, PVS, F*, Prolog, Bash, Racket, Makam, Agda
 
 \end{tabular}
 
